kubernetes-code/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: propmarket
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

#apiVersion: v1
#kind: Service
#metadata:
#  name: frontend-service
#  namespace: propmarket
#
#spec:
#  selector:
#    app: frontend
#
#  ports:
#    - port: 80
#      targetPort: 80
#      nodePort: 30080   # optional but recommended
#
#  type: NodePort
