kubernetes-code/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propmarket-ingress
  namespace: propmarket
  annotations:
#    kubernetes.io/ingress.class: alb
#    spec.ingressClassName: alb
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/target-type: ip

    # 🔥 THIS IS THE KEY DEVOPS FIX
#    alb.ingress.kubernetes.io/actions.backend: >
#      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"realestate-backend","servicePort":"8080"}]}}
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://www.goldbullet.shop"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "www.goldbullet.shop"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realestate-backend
                port:
                  number: 8080
